name: HaskellBook
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    "Theoretical Exercises/Chapter 8/TypesReview.md"
    "Theoretical Exercises/Chapter 3/reading_syntax.md"
    "Theoretical Exercises/Chapter 4/chapter_exercises.md"
    "Theoretical Exercises/Chapter 4/matching.md"
    "Theoretical Exercises/Chapter 4/correcting_syntax.md"
    "Theoretical Exercises/Chapter 7/MultipleChoice.md"
    "Theoretical Exercises/Chapter 2/chapter_exercises.md"
    "Theoretical Exercises/Chapter 2/comperhension_check.md"
    "Theoretical Exercises/Chapter 5/determine.md"
    "Theoretical Exercises/Chapter 5/multiple_choice.md"
    "Theoretical Exercises/Chapter 6/multiple_choice.md"
x-ghc-framework-version: 7.10.3-5.18-2
x-last-ide-version: HfM1.3.2
Executable HaskellBook
  main-is: HaskellBook.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Chapter_3.Exercises
      Chapter_2.Exercises
      Chapter_5.Function
      Chapter_5.DetermineTheType
      Chapter_5.Signature
      Chapter_5.Type_kwon_do
      Chapter_5.DoesItCompile
      Chapter_8.Recursion
      Chapter_8.ReviewingCurrying
      Chapter_8.DividedBy
      Chapter_8.McCarthy
      Chapter_7.CasePractice
      Chapter_7.ArtfulDodgy
      Chapter_7.ChapterExercises
      Chapter_7.GrabBag
      Chapter_6.Datatype
      Chapter_6.Type_kwon_do
      Chapter_6.Typecheck
      Chapter_6.Match_the_types
